vbnc/vbnc/vbnc/tests/Errors/30311-33.vb
Imports System
Class T
    Const M_String As uint16 = #1/1/2008#
End Class